# emacs-init

./: README.md
cmakeproject/: CMakeLists.txt  GPATH  GRTAGS  GTAGS  toplevel.cc
cmakeproject/hoge/: hoge.cc
emacs.d/: init.el
simpleproject/: .dir-locals.el  GPATH  GRTAGS  GTAGS  toplevel.cc
simpleproject/include/: lib.h
simpleproject/lib/: lib.cc
